--- a/index.ejs
+++ b/index.ejs
@@ -10,6 +10,7 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <!-- 第三方 css/js 依赖引用 -->
     <link href="https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css" rel="stylesheet">
+    <link href="//at.alicdn.com/t/font_585271_c7qt9m8ehyyzaor.css" rel="stylesheet"/>
 </head>
 <body>
     <!-- entry 节点 -->
